--- a/FIREBASE/website/public/index.html
+++ b/FIREBASE/website/public/index.html
@@ -7,6 +7,12 @@
 </head>
 <body>
   <h1>Welcome to My Firebase Website</h1>
+  <div id="data-container">
+    <h2>Data from Firebase Realtime Database:</h2>
+    <pre id="data"></pre>
+  </div>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
